# torchOCR

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo_inference.py  demo_pdf.py
scripts/: convert_paddle_crnn.py  convert_paddle_dbnet.py  infer.py  test_converted_dbnet.py  test_full_ocr.py  test_inference.py
src/torchocr/: __init__.py  charsets.py  decoders.py  losses.py  pipelines.py  postprocess.py
src/torchocr/core/: __init__.py  structures.py
src/torchocr/data/: __init__.py
src/torchocr/io/: __init__.py  pdf.py
src/torchocr/models/: __init__.py  detection.py  hub.py  recognition.py
src/torchocr/models/backbones/: __init__.py  resnet_vd.py
tests/: conftest.py  test_backbones.py  test_charsets.py  test_converter.py  test_crnn_converter.py  test_decoders.py  test_io.py  test_losses.py  test_models.py  test_pipeline.py  test_postprocess.py
