[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "torchocr"
version = "0.1.0"
description = "PyTorch-native end-to-end OCR pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "pymupdf",
    "scipy",
    "opencv-python-headless",
    "pyclipper",
    "shapely",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
convert = [
    "paddlepaddle>=2.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
torchocr = ["data/*.txt"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
